--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,31 +33,31 @@ services:
       APPLICATION_SECRET: "random-secret"
 
   # Influx DB Server
-  influxdb:
-    image: bitnami/influxdb
-    container_name: influxdb
+   influxdb:
+    image: influxdb:latest
     ports:
-     - 8086:8086
-    volumes:
-      - influxdb:/var/lib/influxdb
+      - "8086:8086"
     environment:
-      INFLUXDB_DB: mydb
-      INFLUXDB_ADMIN_USER_TOKEN: admin
-      INFLUXDB_ADMIN_USER_PASSWORD: adminpassword
-
-  # Framework for data visualization
+      INFLUXDB_DB: telegraf
+      INFLUXDB_ADMIN_USER: admin
+      INFLUXDB_ADMIN_PASSWORD: password
+      INFLUXDB_USER: telegraf
+      INFLUXDB_USER_PASSWORD: password
+# Framework for data visualization
   grafana:
     image: grafana/grafana
-    container_name: grafana
-    ports:
-      - 3000:3000
-    volumes:
-      - grafana:/var/lib/grafana
+    container_name: grafana-server
+    restart: always
+    depends_on:
+      - influxdb
     environment:
       - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=adminpassword
-    depends_on: 
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_INSTALL_PLUGINS=
+    links:
       - influxdb
+    ports:
+      - '3000:3000'
     
   #Framework for Spark
   spark-master:
