--- a/telegraf.conf
+++ b/telegraf.conf
@@ -1,44 +1,44 @@
- [global_tags]
-
 [agent]
-  interval = "60s"
+  interval = "10s"
   round_interval = true
-  metric_batch_size = 1000
-  metric_buffer_limit = 10000
+  metric_batch_size = 100
+  metric_buffer_limit = 1000
   collection_jitter = "0s"
   flush_interval = "10s"
   flush_jitter = "0s"
   precision = ""
-  hostname = "192.xxx.0.xxx"
+  hostname = ""
   omit_hostname = false
+  debug = true
+  logtarget = "stderr"
 
-[[outputs.influxdb]]
+[[outputs.influxdb_v2]]
   urls = ["http://influxdb:8086"]
-  database = "influx"
-  timeout = "5s"
-  username = "telegraf"
-  password = "metricsmetricsmetricsmetrics"
-
-
+  token = "qz0fjhYzqkkEjzvsefFbAvOMui8kkFlt6iD0Qr-W7PipnCO3Dl0HLprkxOwnRKwJPOQFvOk0j_mGa0GGrt2vdA=="
+  organization = "OST"
+  bucket = "Epsymolo1"
+[[inputs.kafka_consumer]]
+  brokers = ["kafka:9092"]
+  topics = ["Epsymolo1"]
+  max_message_len = 1000
+  data_format = "json"
+  tag_keys=["DayOfWeek"]
+  #json_time_key="Timestamp"
+  json_string_fields = ["Timestamp"]
+  consumer_group="telegraf_metrics_consumers"
+  offset="oldest"
+  name_override = "jsontest"
+  #json_time_format = "unix_ms"
+# Read metrics about cpu usage
 [[inputs.cpu]]
+  ## Whether to report per-cpu stats or not
   percpu = true
+  ## Whether to report total system cpu stats or not
   totalcpu = true
+  ## If true, collect raw CPU time metrics
   collect_cpu_time = false
+  ## If true, compute and report the sum of all non-idle CPU states
+  ## NOTE: The resulting 'time_active' field INCLUDES 'iowait'!
   report_active = false
-
-
-[[inputs.disk]]
-  ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs"]
-
-
-[[inputs.diskio]]
-
-[[inputs.kernel]]
-
-[[inputs.mem]]
-
-[[inputs.processes]]
-
-[[inputs.swap]]
-
-[[inputs.system]]
+  ## If true and the info is available then add core_id and physical_id tags
+  core_tags = false
