--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.6'
 networks:
   elk:
     driver: bridge
+  kafkanet: # connection to kafka
+    name: kafkanet
+    driver: bridge
 
 services:
 
@@ -19,10 +22,11 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9002
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_HOSTNAME: localhost
       ALLOW_PLAINTEXT_LISTENER: 1
+    
 
   kafka_manager:
     image: hlebalbau/kafka-manager:stable
@@ -35,15 +39,55 @@ services:
   # Influx DB Server
   influxdb:
     image: influxdb:latest
-    ports:
-      - "8086:8086"
+    container_name: influxdb
+    restart: always
     environment:
-      INFLUXDB_DB: telegraf
-      INFLUXDB_ADMIN_USER: admin
-      INFLUXDB_ADMIN_PASSWORD: password
-      INFLUXDB_USER: telegraf
-      INFLUXDB_USER_PASSWORD: password
-# Framework for data visualization
+      - DOCKER_INFLUXDB_INIT_MODE=setup
+      - DOCKER_INFLUXDB_INIT_USERNAME=data_hunters  # Replace with your desired admin username
+      - DOCKER_INFLUXDB_INIT_PASSWORD=OST22/23  # Replace with your desired admin password
+      - DOCKER_INFLUXDB_INIT_ORG=OST         # Replace with your desired organization name
+      - DOCKER_INFLUXDB_INIT_BUCKET=Epsymolo # Replace with your desired bucket name
+      - DOCKER_INFLUXDB_INIT_RETENTION=1w    # Optional: default retention policy, e.g., '1w' for one week
+      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=ERKMHDv-dYn0HaOhHdTqr0eCLNm3kSXJ79aBgHqqAeAYLEDiCQk1zZYj6GBIbAFFLd-Iaeh85P4E5Y0tI5y4Vw==
+  # Replace with your desired token
+    ports:
+      - '8086:8086'
+      
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+    volumes:
+      - mongodb_data:/data/db
+
+  #kafdrop:
+    # image: obsidiandynamics/kafdrop:latest
+    # container_name: kafdrop
+    # ports:
+    # - 9081:9081
+    # environment:
+    # - KAFKA_BROKERCONNECT=kafka:9092
+    # depends_on:
+    # - kafka
+      
+  telegraf:
+    image: telegraf
+    container_name: telegraf
+    restart: always
+    volumes:
+      - ./telegraf.conf:/etc/telegraf/telegraf.conf:ro
+    depends_on:
+      - influxdb
+    links:
+      - influxdb
+    ports:
+      - '8125:8125'
+
+  # Framework for data visualization
   grafana:
     image: grafana/grafana
     container_name: grafana-server
@@ -53,11 +97,13 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
-      - GF_INSTALL_PLUGINS=
+      # - GF_INSTALL_PLUGINS=
     links:
       - influxdb
     ports:
       - '3000:3000'
+    volumes:
+      - grafana_data:/var/lib/grafana
     
   #Framework for Spark
   spark-master:
@@ -81,5 +127,6 @@ services:
 
     
 volumes:
-  influxdb:
-  grafana:
+  grafana_data: {}
+  influxdb_data: {}
+  mongodb_data: {}
