--- a/telegraf.conf
+++ b/telegraf.conf
@@ -1,10 +1,10 @@
 [agent]
   interval = "10s"
   round_interval = true
-  metric_batch_size = 100
-  metric_buffer_limit = 1000
+  metric_batch_size = 1000
+  metric_buffer_limit = 10000
   collection_jitter = "0s"
-  flush_interval = "10s"
+  flush_interval = "60s"
   flush_jitter = "0s"
   precision = ""
   hostname = ""
@@ -14,21 +14,22 @@
 
 [[outputs.influxdb_v2]]
   urls = ["http://influxdb:8086"]
-  token = "qz0fjhYzqkkEjzvsefFbAvOMui8kkFlt6iD0Qr-W7PipnCO3Dl0HLprkxOwnRKwJPOQFvOk0j_mGa0GGrt2vdA=="
+  token = "M0t0SGFeLJMZsGVeCLzFcedDVw5p-KC1HMf3ljYO-4ljLSSb5OHBfkmbxegVkT0qD4X9HHZQS8LGklotRBVcMg=="
   organization = "OST"
-  bucket = "Epsymolo1"
+  bucket = "Epsymolo"
 [[inputs.kafka_consumer]]
   brokers = ["kafka:9092"]
-  topics = ["Epsymolo1"]
-  max_message_len = 1000
+  topics = ["Epsymolo"]
+  max_message_len = 40000
   data_format = "json"
-  tag_keys=["DayOfWeek"]
-  #json_time_key="Timestamp"
-  json_string_fields = ["Timestamp"]
+  tag_keys=["PowerLineID"]
+  json_time_key="Timestamp"
+  json_string_fields = ["PowerLineID"]
   consumer_group="telegraf_metrics_consumers"
   offset="oldest"
-  name_override = "jsontest"
-  #json_time_format = "unix_ms"
+  
+  name_override = "Data"
+  json_time_format = "unix"
 # Read metrics about cpu usage
 [[inputs.cpu]]
   ## Whether to report per-cpu stats or not
